docs-archive/apache-airflow-providers-google/19.2.0/_sources/_api/airflow/providers/google/cloud/sensors/cloud_composer/index.rst.txt
airflow.providers.google.cloud.sensors.cloud_composer
=====================================================

.. py:module:: airflow.providers.google.cloud.sensors.cloud_composer

.. autoapi-nested-parse::

   This module contains a Cloud Composer sensor.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.sensors.cloud_composer.CloudComposerDAGRunSensor
   airflow.providers.google.cloud.sensors.cloud_composer.CloudComposerExternalTaskSensor


Module Contents
---------------

.. py:class:: CloudComposerDAGRunSensor(*, project_id, region, environment_id, composer_dag_id, allowed_states = None, execution_range = None, composer_dag_run_id = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 10, use_rest_api = False, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Check if a DAG run has completed.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: The name of the Composer environment.
   :param composer_dag_id: The ID of executable DAG.
   :param allowed_states: Iterable of allowed states, default is ``['success']``.
   :param execution_range: execution DAGs time range. Sensor checks DAGs states only for DAGs which were
       started in this time range. For yesterday, use [positive!] datetime.timedelta(days=1).
       For future, use [negative!] datetime.timedelta(days=-1). For specific time, use list of
       datetimes [datetime(2024,3,22,11,0,0), datetime(2024,3,22,12,0,0)].
       Or [datetime(2024,3,22,0,0,0)] in this case sensor will check for states from specific time in the
       past till current time execution.
       Default value datetime.timedelta(days=1).
   :param composer_dag_run_id: The Run ID of executable task. The 'execution_range' param is ignored, if both specified.
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param poll_interval: Optional: Control the rate of the poll for the result of deferrable run.
   :param deferrable: Run sensor in deferrable mode.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'composer_dag_id', 'impersonation_chain')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: composer_dag_id


   .. py:attribute:: allowed_states


   .. py:attribute:: execution_range
      :value: None



   .. py:attribute:: composer_dag_run_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: poll_interval
      :value: 10



   .. py:attribute:: use_rest_api
      :value: False



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


   .. py:property:: hook
      :type: airflow.providers.google.cloud.hooks.cloud_composer.CloudComposerHook



.. py:class:: CloudComposerExternalTaskSensor(*, project_id, region, environment_id, composer_external_dag_id, composer_external_task_id = None, composer_external_task_ids = None, composer_external_task_group_id = None, allowed_states = None, skipped_states = None, failed_states = None, execution_range = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 10, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Waits for a different DAG, task group, or task to complete for a specific composer environment.

   If both `composer_external_task_group_id` and `composer_external_task_id` are ``None`` (default), the sensor
   waits for the DAG.
   Values for `composer_external_task_group_id` and `composer_external_task_id` can't be set at the same time.

   By default, the CloudComposerExternalTaskSensor will wait for the external task to
   succeed, at which point it will also succeed. However, by default it will
   *not* fail if the external task fails, but will continue to check the status
   until the sensor times out (thus giving you time to retry the external task
   without also having to clear the sensor).

   By default, the CloudComposerExternalTaskSensor will not skip if the external task skips.
   To change this, simply set ``skipped_states=[TaskInstanceState.SKIPPED]``.
   Note that if you are monitoring multiple tasks, and one enters error state
   and the other enters a skipped state, then the external task will react to
   whichever one it sees first. If both happen together, then the failed state
   takes priority.

   It is possible to alter the default behavior by setting states which
   cause the sensor to fail, e.g. by setting ``allowed_states=[DagRunState.FAILED]``
   and ``failed_states=[DagRunState.SUCCESS]`` you will flip the behaviour to
   get a sensor which goes green when the external task *fails* and immediately
   goes red if the external task *succeeds*!

   Note that ``soft_fail`` is respected when examining the failed_states. Thus
   if the external task enters a failed state and ``soft_fail == True`` the
   sensor will _skip_ rather than fail. As a result, setting ``soft_fail=True``
   and ``failed_states=[DagRunState.SKIPPED]`` will result in the sensor
   skipping if the external task skips. However, this is a contrived
   example---consider using ``skipped_states`` if you would like this
   behaviour. Using ``skipped_states`` allows the sensor to skip if the target
   fails, but still enter failed state on timeout. Using ``soft_fail == True``
   as above will cause the sensor to skip if the target fails, but also if it
   times out.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: The name of the Composer environment.
   :param composer_external_dag_id: The dag_id that contains the task you want to
       wait for. (templated)
   :param composer_external_task_id: The task_id that contains the task you want to
       wait for. (templated)
   :param composer_external_task_ids: The list of task_ids that you want to wait for. (templated)
       If ``None`` (default value) the sensor waits for the DAG. Either
       composer_external_task_id or composer_external_task_ids can be passed to
       CloudComposerExternalTaskSensor, but not both.
   :param composer_external_task_group_id: The task_group_id that contains the task you want to
       wait for. (templated)
   :param allowed_states: Iterable of allowed states, default is ``['success']``
   :param skipped_states: Iterable of states to make this task mark as skipped, default is ``None``
   :param failed_states: Iterable of failed or dis-allowed states, default is ``None``
   :param execution_range: execution DAGs time range. Sensor checks DAGs states only for DAGs which were
       started in this time range. For yesterday, use [positive!] datetime.timedelta(days=1).
       For future, use [negative!] datetime.timedelta(days=-1). For specific time, use list of
       datetimes [datetime(2024,3,22,11,0,0), datetime(2024,3,22,12,0,0)].
       Or [datetime(2024,3,22,0,0,0)] in this case sensor will check for states from specific time in the
       past till current time execution.
       Default value datetime.timedelta(days=1).
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param poll_interval: Optional: Control the rate of the poll for the result of deferrable run.
   :param deferrable: Run sensor in deferrable mode.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'composer_external_dag_id',...



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: allowed_states


   .. py:attribute:: skipped_states
      :value: []



   .. py:attribute:: failed_states
      :value: []



   .. py:attribute:: execution_range
      :value: None



   .. py:attribute:: composer_external_dag_id


   .. py:attribute:: composer_external_task_id
      :value: None



   .. py:attribute:: composer_external_task_ids
      :value: None



   .. py:attribute:: composer_external_task_group_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: poll_interval
      :value: 10



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


   .. py:property:: hook
      :type: airflow.providers.google.cloud.hooks.cloud_composer.CloudComposerHook



